--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "antd-mobile": "^5.0.0-beta.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.2.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
