--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@types/react-dom": "^17.0.0",
     "antd": "^4.17.4",
     "axios": "^0.24.0",
+    "emoji-picker-react": "^3.5.0",
     "http-proxy-middleware": "^2.0.1",
+    "js-audio-recorder": "^1.0.7",
+    "qiniu-js": "^3.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-emotor": "^1.0.6",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
