feat: 微前端改造

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,11 +1,12 @@
 packages:
   - 'libs/**'
-  - 'packages/**'
-    chat
-    portal
-    document
-    question
-    entertainment
-    oncall
-    space
-    meeting
+  - 'packages/**':
+    - chat
+    - portal
+    - document
+    - question
+    - entertainment
+    - oncall
+    - space
+    - meeting
+
