--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jira",
+  "name": "chat",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -36,7 +36,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "rescripts start",
+    "start": "rescripts start --port 3001",
     "build": "rescripts build",
     "test": "rescripts test",
     "eject": "rescripts eject",
