--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -20,6 +20,7 @@
     "esbuild": "^0.19.3",
     "pinia": "^2.1.6",
     "qiankun": "^2.10.13",
+    "vite-plugin-qiankun": "^1.0.15",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
