--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,13 +1,3 @@
 packages:
-  - 'libs/**'
-  - 'packages/**':
-    - chat
-    - portal
-    - document
-    - question
-    - entertainment
-    - oncall
-    - space
-    - meeting
-    - information
+  - 'packages/*'
 
