--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.27",
     "antd": "^4.17.4",
     "axios": "^0.24.0",
     "emoji-picker-react": "^3.5.0",
@@ -66,6 +67,7 @@
     "@commitlint/config-conventional": "^13.1.0",
     "@rescripts/cli": "^0.0.16",
     "@types/react-router-dom": "^5.3.0",
+    "eslint": "^7.11.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
