--- a/packages/portal/nginx.conf
+++ b/packages/portal/nginx.conf
@@ -7,11 +7,12 @@ server {
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
+    try_files $uri $uri/ @rewrites;
   }
 
-    location /chat/ {
-        proxy_pass http://chat/;
-    }
+  location @rewrites {
+     rewrite ^(.+)$ /index.html last;
+   }
 
     location /doc/ {
         proxy_pass http://doc/;
