--- a/packages/portal/nginx.conf
+++ b/packages/portal/nginx.conf
@@ -18,6 +18,10 @@ server {
         proxy_pass http://doc/;
     }
 
+    location /chat/ {
+        proxy_pass http://chat/;
+    }
+
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
