--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       NODE_ENV: 'production' 
     ports:
       - '80:80'          # 端口映射，宿主机端口：容器端口
+    networks:
+        - common-network
   doc:
     container_name: doc
     restart: always
@@ -19,6 +21,8 @@ services:
       dockerfile: Dockerfile
     environment:
       NODE_ENV: 'production'
+    networks:
+      - common-network
     depends_on:            # 依赖容器名，会在此容器启动之后启动
       - master
   chat:
@@ -29,5 +33,10 @@ services:
       dockerfile: Dockerfile
     environment:
       NODE_ENV: 'production'
+    networks:
+      - common-network
     depends_on:            # 依赖容器名，会在此容器启动之后启动
       - master
+networks:
+  common-network:
+    external: true 
