feat: 增加开发环境运行脚本

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "sh ./sh/test.sh",
+    "test": "node ./script/test.js",
     "start": "electron .",
-    "build": "sh ./sh/build.sh"
+    "build": "sh ./script/build.sh",
+    "dev": "node ./script/dev.js"
   },
   "keywords": [],
   "author": "",
