feat: 设置jenkins中node版本

--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -38,7 +38,7 @@
   },
   "scripts": {
     "dev": "export NODE_OPTIONS=--openssl-legacy-provider && PORT=3001 rescripts start",
-    "build": "rescripts build",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && rescripts build",
     "test": "rescripts test",
     "eject": "rescripts eject",
     "json-server": "json-server __json_server_mock__/db.json --watch"
