--- a/package.json
+++ b/package.json
@@ -15,11 +15,28 @@
   "devDependencies": {
     "electron": "^26.3.0",
     "nx": "16.10.0",
-    "nx-cloud": "latest"
+    "nx-cloud": "latest",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
+    "prettier": "2.4.1",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0"
   },
   "workspaces": {
     "packages": [
       "packages/*"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "packages/**/src/*.{js,css,md,ts,tsx}": [
+      "prettier --write",
+      "git add"
     ]
   }
 }
