--- a/packages/portal/package.json
+++ b/packages/portal/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "eslint-config-react-app": "^7.0.1",
     "qiankun": "^2.10.13",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "typescript": "^4.1.2",
+    "react-router-dom": "^5.3.0",
+    "antd": "^4.17.4",
+    "axios": "^0.24.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "@types/react-router-dom": "^5.3.0"
   },
   "scripts": {
     "dev": "PORT=3004 react-scripts start",
