--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^26.3.0",
     "nx": "16.10.0",
     "nx-cloud": "latest",
     "husky": "^7.0.2",
@@ -23,8 +22,9 @@
     "@commitlint/config-conventional": "^13.1.0"
   },
   "workspaces": {
-    "packages": [
-      "packages/*"
+    "package": [
+      "packages/*",
+      "libs/*"
     ]
   },
   "husky": {
