--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "common": "workspace:*",
     "@ant-design/icons": "^4.7.0",
     "@better-scroll/core": "^2.4.2",
     "@better-scroll/mouse-wheel": "^2.4.2",
     "@better-scroll/pull-up": "^2.4.2",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "eslint-config-react-app": "^7.0.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -29,7 +31,7 @@
     "react-emotor": "^1.0.6",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^4.2.0",
@@ -46,8 +48,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "prettier"
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -67,7 +68,6 @@
     "@commitlint/config-conventional": "^13.1.0",
     "@rescripts/cli": "^0.0.16",
     "@types/react-router-dom": "^5.3.0",
-    "eslint": "^7.11.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
