--- a/packages/entertainment/package.json
+++ b/packages/entertainment/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "http-server -p 3005  --cors"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1"
   },
   "author": "",
   "license": "ISC"
