feat: 修改docker配置文件

--- a/packages/chat/Dockerfile
+++ b/packages/chat/Dockerfile
@@ -10,6 +10,7 @@ RUN npm install pnpm@8.7.6 -g
 RUN pnpm install
 RUN cd ./packages/chat
 RUN npm run build 
+RUN cd ../../
 
 # 新建构建阶段deploy-stage，指定nginx为基础镜像，该阶段用于配置和运行nginx
 FROM nginx:stable-alpine as deploy-stage
