--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "common": "workspace:*",
+    "openchat-common": "1.0.0",
     "@ant-design/icons": "^4.7.0",
     "@better-scroll/core": "^2.4.2",
     "@better-scroll/mouse-wheel": "^2.4.2",
