--- a/packages/portal/nginx.conf
+++ b/packages/portal/nginx.conf
@@ -22,9 +22,9 @@ server {
         proxy_pass http://chat/;
     }
 
-    location /api/ {
-        proxy_pass http://meeting:3000;
-    }
+  #  location /api/ {
+  #     proxy_pass http://meeting:3000;
+  # }
 
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
